# syseg

./: .gitignore  AUTHORS  CONTRIBUTING.md  Makefile.am  README.md  REUSE.toml  bootstrap.sh  configure.ac
.reuse/templates/: default.jinja2  export.jinja2
arcane/: README
docs/: README  ai_policy.md  syseg.md  third_party.md
draft/legacy/: Makefile-lg  bin.ld  csmwrapx64.efi  hello-bios.S  hello.S  makefile  mbr.S  mbr.ld  mem.S  vbr.S  vbr.ld
eg/: Makefile.am  README
eg/hello/: README  build.mk  extra-01a.asm  extra-01b.asm  extra-02.asm  extra-02.ld  extra-02a.asm  extra-02a.ld  extra-02b.asm  extra-02b.ld  extra-03.ld  extra-03a.asm  extra-03b.asm  extra-04-rt0.S  extra-04.ld  extra-04a.S  extra-04b.S  hello-02.hex  hello-02a.hex  hello-02b.hex  hello-03.asm  hello-04.asm  hello-05-disk.asm  hello-05.asm  hello-05a.asm  hello-06-floppy.asm  hello-06.asm  hello-06a.asm  hello-06b.asm  hello-07.asm  hello-07a.asm  hello-07b.asm  hello-07vram.asm  hello-08.asm  hello-09-rt0.asm  hello-09.asm  hello-10-rt0.asm  hello-10.ld  hello-10a.asm  hello-10b.asm  (+6 more)
eg/hw/: Makefile.am  README  build.mk  hello-00.c  hello-01.c  kh.c
m4/: syseg.m4
tools/: Makefile.am  README  bintools.mk  config.mk.in  csmwrapia32.efi  export-local.mk  export-notes.md  export-reuse.toml  export-root.mk  getsysinfo.in  hex2bin.c  local.mk  mbr-fat32.S  mbr-fat32.ld  newfile  newfile-create  prepfile  vbr-fat12.ld  vbr-fat32.ld
tools/prepfile-templates/: _.h  build.mk  config
