# SPDX-FileCopyrightText: 2021 Monaco F. J. <https://github.com/monacofj>
#
# SPDX-License-Identifier: GPL-3.0-or-later
#
# This file is part of SYSeg (https://github.com/monacofj/syseg)


# Build rules specifics to the example in this directory.                                   

include @MANUAL_BUILD_RULES@

include @TOOLS_PATH@/bintools.mk

clean-local: manual-clean
